Added Edit button and function

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -37,6 +37,11 @@
                 <button type="submit" class="btn btn-danger">Delete</button>
               </form>
             </td>
+            <td>
+              <form method="GET" action="/urls/<%= id %>">
+                <button type="submit" class="btn btn-primary">Edit</button>
+              </form>
+            </td>
           </tr>
           <% } %>
         </tbody>
