--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -22,6 +22,18 @@
         </p>
       </div>
       <div class="card-footer text-muted"></div>
+      <h1>Edit</h1>
+      <form class="form-inline justify-content-center" action="/urls/<%= id %>/edit" method="POST">
+        <div class="form-group mb-2>
+          <label for="longURL">New URL:</label>
+          <input
+            class="form-control"
+            type="text"
+            name="editedLongURL"
+            placeholder="http://"
+            style="width: 300px; margin: 1em"
+          />
+          <button type="submit" class="btn btn-primary">Submit</button
     </div>
     <!-- Bootstrap JS -->
     <script
