Added a username display using cookie-parser

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -30,6 +30,9 @@
             <button type="submit" class="btn btn-primary">Login</button>
           </div>
         </form>
+        <a class="nav-item text-white align-self-center mb-1 mx-4">
+          <%= username %>
+        </a>
       </div>
     </div>
   </nav>
