Added login page and improved getUserByEmail helper

--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -24,8 +24,8 @@
           class="card-body d-flex flex-column justify-content-center card text-white bg-dark"
           style="height: 400px"
         >
-          <h3 class="card-title" style="margin-bottom: 30px">Create Account</h3>
-          <form class="form-inline" action="/register" method="POST">
+          <h3 class="card-title" style="margin-bottom: 30px">User Login</h3>
+          <form class="form-inline" action="/login" method="POST">
             <div class="form-group mb-2 container d-flex flex-column">
               <div class="d-flex flex-column">
                 <label class="align-self-start ml-1" for="email">Email:</label>
@@ -51,10 +51,10 @@
               </div>
               <button
                 type="submit"
-                class="btn btn-outline-warning"
+                class="btn btn-outline-info"
                 style="margin-top: 20px"
               >
-                Register
+                Log in
               </button>
             </div>
           </form>
