--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -40,16 +40,25 @@
         </div>
         <% } else { %>
         <div class="navbar-nav">
-          <form class="nav-item form-inline" method="POST" action="/login">
+          <form class="nav-item form-inline" method="GET" action="/login">
             <div class="form-group mb-2">
-              <input
-                class="form-control"
-                type="text"
-                name="username"
-                placeholder="Username"
-                style="width: 250px; margin: 1em"
-              />
-              <button type="submit" class="btn btn-outline-info">Login</button>
+                <button
+                  type="submit"
+                  class="btn btn-outline-info"
+                  style="width: 100px"
+                >
+                  Login
+                </button>
+              </form>
+              <form method="GET" action="/register">
+                <button
+                  type="submit"
+                  class="btn btn-outline-warning mx-3"
+                  style="width: 100px"
+                >
+                  Sign Up
+                </button>
+              </form>
             </div>
           </form>
           <% } %>
