--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -34,12 +34,16 @@
             <td><%= urls[id] %></td>
             <td>
               <form method="POST" action="/urls/<%= id %>/delete">
-                <button type="submit" class="btn btn-danger">Delete</button>
+                <button type="submit" class="btn btn-outline-danger">
+                  Delete
+                </button>
               </form>
             </td>
             <td>
               <form method="GET" action="/urls/<%= id %>">
-                <button type="submit" class="btn btn-primary">Edit</button>
+                <button type="submit" class="btn btn-outline-primary">
+                  Edit
+                </button>
               </form>
             </td>
           </tr>
