--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -17,8 +17,20 @@
     <title>TinyApp</title>
   </head>
   <body>
-    <%- include('partials/_header') %>
+    <%- include('partials/_header') %> <% if (!user) { %>
     <main style="margin: 1em">
+      <div class="alert alert-warning alert-dismissible fade show" role="alert">
+        <strong>Please Log in to see this content.</strong>
+        <button
+          type="button"
+          class="close"
+          data-dismiss="alert"
+          aria-label="Close"
+        >
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <% } %>
       <div class="card text-center">
         <div
           class="card-body d-flex flex-column justify-content-center card text-white bg-dark"
