--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -16,14 +16,14 @@
     <div class="card text-center">
       <div class="card-header"></div>
       <div class="card-body">
-        <h5 class="card-title">TinyURL for: <%= longURL %></h5>
+        <h5 class="card-title">TinyURL for: <%= longURL.longURL %></h5>
         <p class="card-text">
-          Short URL ID: <a href="/u/<%= id %>"><%= id %></a>
+          Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a>
         </p>
       </div>
       <div class="card-footer text-muted"></div>
       <h1>Edit</h1>
-      <form class="form-inline justify-content-center" action="/urls/<%= id %>/edit" method="POST">
+      <form class="form-inline justify-content-center" action="/urls/<%= shortURL %>" method="POST">
         <div class="form-group mb-2>
           <label for="longURL">New URL:</label>
           <input
