--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -20,7 +20,7 @@
     <%- include('partials/_header') %> <% if (!user) { %>
     <main style="margin: 1em">
       <div class="alert alert-warning alert-dismissible fade show" role="alert">
-        <strong>Please Log in to see this content.</strong>
+        <strong>Please Log in.</strong>
         <button
           type="button"
           class="close"
