--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -18,20 +18,27 @@
   <body>
     <%- include('partials/_header') %>
     <main style="margin: 1em">
-      <h3>Create TinyURL</h3>
-      <form class="form-inline" action="/urls" method="POST">
-        <div class="form-group mb-2">
-          <label for="longURL">Enter a URL:</label>
-          <input
-            class="form-control"
-            type="text"
-            name="longURL"
-            placeholder="http://"
-            style="width: 300px; margin: 1em"
-          />
-          <button type="submit" class="btn btn-outline-primary">Submit</button>
-        </div>
-      </form>
+      <div
+        class="card-body d-flex flex-column justify-content-center card text-white bg-dark"
+        style="height: 200px"
+      >
+        <h3 class="card-title" style="margin-bottom: 20px">Create TinyURL</h3>
+        <form class="form-inline" action="/urls" method="POST">
+          <div class="form-group mb-2">
+            <label for="longURL">Enter a URL:</label>
+            <input
+              class="form-control"
+              type="text"
+              name="longURL"
+              placeholder="http://"
+              style="width: 300px; margin: 1em"
+            />
+            <button type="submit" class="btn btn-outline-warning">
+              Submit
+            </button>
+          </div>
+        </form>
+      </div>
     </main>
     <!-- Bootstrap JS -->
     <script
