--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -15,14 +15,15 @@
     <%- include('partials/_header') %>
     <div class="card text-center">
       <div class="card-header"></div>
-      <div class="card-body">
-        <h5 class="card-title">TinyURL for: <%= longURL.longURL %></h5>
+      <div class="card-body d-flex flex-column justify-content-center card text-white bg-dark">
+        <h3 class=""><%= shortURL %></h3>
+        <p>TinyURL for:</p><a href="/u/<%= shortURL %>" class="card-title badge badge-dark"><%= longURL.longURL %></a>
         <p class="card-text">
-          Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a>
         </p>
       </div>
       <div class="card-footer text-muted"></div>
-      <h1>Edit</h1>
+      <div class="card-body d-flex flex-column justify-content-center card text-white bg-dark">
+      <h3 class="card-title">Edit</h3>
       <form class="form-inline justify-content-center" action="/urls/<%= shortURL %>" method="POST">
         <div class="form-group mb-2>
           <label for="longURL">New URL:</label>
@@ -33,7 +34,7 @@
             placeholder="http://"
             style="width: 300px; margin: 1em"
           />
-          <button type="submit" class="btn btn-outline-primary">Submit</button
+          <button type="submit" class="btn btn-outline-warning">Submit</button
     </div>
     <!-- Bootstrap JS -->
     <script
